--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
     <style>
       :root {
         --primary-color: #d4af37;
@@ -591,45 +593,52 @@
     </style>
   </head>
   <body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-      <div class="container">
-     <a class="navbar-brand d-flex align-items-center" href="#home">
-  <img src="./img/logo.jpeg"  width="40" height="40" class="me-2">
-  Tilak lodge
-</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#home">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#rooms">Rooms</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#gallery">Gallery</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#testimonials">Testimonials</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+  <div class="container">
+    <a class="navbar-brand d-flex align-items-center" href="#home">
+   
+      <span><i class="fas fa-hotel me-1"></i>Tilak Lodge</span>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#home">
+            <i class="fas fa-home me-1"></i> Home
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#about">
+            <i class="fas fa-info-circle me-1"></i> About
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#rooms">
+            <i class="fas fa-bed me-1"></i> Rooms
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#gallery">
+            <i class="fas fa-image me-1"></i> Gallery
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#testimonials">
+            <i class="fas fa-comment-dots me-1"></i> Testimonials
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contact">
+            <i class="fas fa-phone me-1"></i> Contact
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
     <!-- Hero Section -->
     <section id="home" class="hero">
@@ -656,17 +665,13 @@
           <div class="col-lg-6">
             <div class="about-text">
               <h3 class="font-playfair">Luxury Redefined</h3>
-              <p>
-                Since 1985, Grandeur Hotel has been setting the standard for
-                luxury hospitality. Our commitment to excellence is evident in
-                every detail, from our elegantly appointed rooms to our
-                world-class amenities.
-              </p>
-              <p>
-                Located in the heart of the city, we offer easy access to major
-                attractions, business districts, and cultural landmarks while
-                providing a peaceful retreat from the urban hustle.
-              </p>
+             <p>
+  Since 2012, Tilak Lodge has been a trusted name in comfortable and affordable hospitality. Blending tradition with modern convenience, we pride ourselves on warm service and attention to detail that ensures every guest feels right at home.
+</p>
+<p>
+  Ideally located in the heart of the town, Tilak Lodge offers easy access to local markets, temples, transportation hubs, and cultural spots—while providing a quiet and restful stay away from the daily bustle.
+</p>
+
               <div class="about-features">
                 <div class="feature-item">
                   <i class="fas fa-check"></i>
@@ -825,7 +830,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="room-card">
               <div class="room-image">
-                <img src="./img/6.jpeg" alt="Deluxe Room" class="img-fluid" />
+                <img src="https://pix10.agoda.net/property/56131490/0/964db01a4a6c0b0650d3c9b60e7856fb.jpeg?ce=0&s=702x392" alt="Deluxe Room" class="img-fluid" />
               </div>
               <div class="room-content">
                 <h4 class="font-playfair">Premium Comfort Room</h4>
@@ -887,7 +892,7 @@
             <div class="room-card">
               <div class="room-image">
                 <img
-                  src="./img/8.jpeg"
+                  src="https://content.jdmagicbox.com/v2/comp/nagpur/r4/0712px712.x712.150202141844.d8r4/catalogue/rajkiran-homes-mankapur-nagpur-bungalows-on-rent-ad8jdzxmwf.jpg"
                   alt="Presidential Suite"
                   class="img-fluid"
                 />
@@ -918,6 +923,15 @@
       </div>
     </section>
 
+
+
+
+
+
+
+
+
+    
     <!-- Gallery Section -->
     <section id="gallery" class="section gallery py-5">
       <div class="container">
@@ -994,7 +1008,7 @@
           <div class="col-md-4 col-sm-6">
             <div class="gallery-item">
               <img
-                src="https://pix10.agoda.net/property/56131490/0/964db01a4a6c0b0650d3c9b60e7856fb.jpeg?ce=0&s=702x392"
+                src="https://miro.medium.com/v2/resize:fit:11694/1*-N9itIZGxd2FvtbbDnlQIg.jpeg"
                 alt="Spa Area"
                 class="img-fluid rounded"
               />
@@ -1012,7 +1026,7 @@
         </div>
       </div>
     </section>
-
+<br><br>
     <!-- Testimonials Section -->
     <section id="testimonials" class="section testimonials">
       <div class="container">
@@ -1075,6 +1089,42 @@
       </div>
     </section>
 
+
+<br><br>
+
+    <!-- Why Choose Us Section -->
+<section id="why-choose-us" class="section bg-light py-5">
+  <div class="container">
+    <div class="section-title text-center mb-5">
+      <h2 class="font-playfair">Why Choose Us</h2>
+      <p>Experience comfort, care, and convenience at Tilak Lodge</p>
+    </div>
+    <div class="row text-center">
+      <div class="col-md-4 mb-4">
+        <div class="p-4 border rounded h-100 shadow-sm">
+          <i class="fas fa-map-marker-alt fa-2x text-golden mb-3"></i>
+          <h5>Prime Location</h5>
+          <p>Situated near key landmarks, markets, and transport hubs for easy access and local exploration.</p>
+        </div>
+      </div>
+      <div class="col-md-4 mb-4">
+        <div class="p-4 border rounded h-100 shadow-sm">
+          <i class="fas fa-bed fa-2x text-golden mb-3"></i>
+          <h5>Clean & Comfortable Rooms</h5>
+          <p>Spacious, well-maintained rooms with all essential amenities for a relaxing stay.</p>
+        </div>
+      </div>
+      <div class="col-md-4 mb-4">
+        <div class="p-4 border rounded h-100 shadow-sm">
+          <i class="fas fa-concierge-bell fa-2x text-golden mb-3"></i>
+          <h5>Personalized Service</h5>
+          <p>Our friendly staff is always ready to assist, ensuring you feel at home during your visit.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+ <br><br>
   <!-- Contact Section -->
 <section id="contact" class="section contact">
   <div class="container">
@@ -1138,6 +1188,15 @@
 </section>
 
 
+
+
+
+
+
+
+
+
+
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
@@ -1190,9 +1249,9 @@
       <div class="footer-bottom text-center py-3">
   <p>
     &copy; 2025 Tilak Lodge. All rights reserved. <br>
-    Designed and Developed by 
+    Designed and Developed by  
     <a href="https://sanchit-fs-dev.github.io/portfolio_01/Assigement/homapage.html" class="footer-link">Sanchit Mahant</a> &
-    <a href="https://himanshufullstackdeveloper.github.io/portfoilohimanshu/" class="footer-link">Himanshu Patil</a>
+    <a href="https://himanshufullstackdeveloper.github.io/portfoilohimanshu/" class="footer-link">Himanshu Patil</a> @ Enjoy Programming
   </p>
 </div>
 
