--- a/index.html
+++ b/index.html
@@ -97,12 +97,8 @@
       /* Hero Section */
       .hero {
         height: 100vh;
-        background: linear-gradient(
-            135deg,
-            rgba(26, 26, 26, 0.7),
-            rgba(212, 175, 55, 0.3)
-          ),
-          url("https://r1imghtlak.mmtcdn.com/317520ea13ad11ebb8920242ac110003.jpg");
+        background: 
+          url("https://www.shutterstock.com/image-illustration/night-scene-modern-style-luxury-600nw-2427087969.jpg");
         background-size: cover;
         background-position: center;
         display: flex;
@@ -1407,10 +1403,10 @@
             <h4>Contact Info</h4>
             <ul>
               <li>
-                <i class="fas fa-map-marker-alt"></i> 123 Luxury Boulevard
+                <i class="fas fa-map-marker-alt"></i> Luxury Lodge
               </li>
               <li><i class="fas fa-phone"></i> +1 (555) 123-4567</li>
-              <li><i class="fas fa-envelope"></i> info@grandeurhotel.com</li>
+              <li><i class="fas fa-envelope"></i> TilakLodge@gmail.com</li>
               <li><i class="fas fa-clock"></i> 24/7 Available</li>
             </ul>
           </div>
