--- a/index.html
+++ b/index.html
@@ -1240,7 +1240,7 @@
                 restaurant's cuisine was phenomenal. Highly recommended for
                 business travelers."
               </div>
-              <div class="testimonial-author">Ayush Mahant</div>
+              <div class="testimonial-author">Divyanshu Thakare</div>
               <div class="testimonial-rating">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -1293,63 +1293,67 @@
   <!-- Contact Section -->
 <section id="contact" class="section contact">
   <div class="container">
-    <div class="section-title">
-      <h2 class="font-playfair">Contact Us</h2>
-      <p>
-        Get in touch to make your reservation or inquire about our services
-      </p>
-    </div>
-    <div class="row">
-      <!-- Contact Info -->
-      <div class="col-lg-6">
-        <div class="contact-info">
-          <div class="contact-item">
-            <i class="fas fa-map-marker-alt"></i>
-            <div>
-              <h5>Address</h5>
-              <p>Main Rd, nearby moksh dhaam, Sawargaon, Katol, Maharashtra 441302</p>
-            </div>
+  <div class="section-title">
+    <h2 class="font-playfair">Contact Us</h2>
+    <p>Get in touch to make your reservation or inquire about our services</p>
+  </div>
+
+  <div class="row">
+    <!-- Contact Info -->
+    <div class="col-lg-6">
+      <div class="contact-info">
+        <div class="contact-item">
+          <i class="fas fa-map-marker-alt"></i>
+          <div>
+            <h5>Address</h5>
+            <p>
+              <a href="https://www.google.com/maps/place/Tilak+lodge/@21.2810304,78.5860725,865m/data=!3m2!1e3!4b1!4m6!3m5!1s0x3bd457dcf18d31fb:0x32de9bd49cfac6b2!8m2!3d21.2810304!4d78.5886474!16s%2Fg%2F11x0x8y7vw?entry=ttu&g_ep=EgoyMDI1MDcwOS4wIKXMDSoASAFQAw%3D%3D" target="_blank" style="text-decoration: none; color: inherit;">
+                Main Rd, nearby Moksh Dhaam, Sawargaon, Katol, Maharashtra 441302
+              </a>
+            </p>
           </div>
-          <div class="contact-item">
-            <i class="fas fa-phone"></i>
-            <div>
-              <h5>Phone</h5>
-              <p>+91(555) 123-4567</p>
-            </div>
+        </div>
+        <div class="contact-item">
+          <i class="fas fa-phone"></i>
+          <div>
+            <h5>Phone</h5>
+            <p><a href="tel:+915551234567" style="text-decoration: none; color: inherit;">+91 8733221234</a></p>
           </div>
-          <div class="contact-item">
-            <i class="fas fa-envelope"></i>
-            <div>
-              <h5>Email</h5>
-              <p>Tilaklodge@gmail.com</p>
-            </div>
+        </div>
+        <div class="contact-item">
+          <i class="fas fa-envelope"></i>
+          <div>
+            <h5>Email</h5>
+            <p><a href="mailto:Tilaklodge@gmail.com" style="text-decoration: none; color: inherit;">Tilaklodge@gmail.com</a></p>
           </div>
-          <div class="contact-item">
-            <i class="fas fa-clock"></i>
-            <div>
-              <h5>  Timeing</h5>
-              <p>24 Hours</p>
-            </div>
+        </div>
+        <div class="contact-item">
+          <i class="fas fa-clock"></i>
+          <div>
+            <h5>Timing</h5>
+            <p>24 Hours</p>
           </div>
         </div>
       </div>
+    </div>
 
-      <!-- Google Map -->
-      <div class="col-lg-6">
-        <div class="map-container" style="border-radius: 10px; overflow: hidden;">
-          <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4637.51629347738!2d78.58607247610837!3d21.281030380432256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd457dcf18d31fb%3A0x32de9bd49cfac6b2!2sTilak%20lodge!5e1!3m2!1sen!2sin!4v1751796456729!5m2!1sen!2sin" 
-            width="100%" 
-            height="450" 
-            style="border:0;" 
-            allowfullscreen="" 
-            loading="lazy" 
-            referrerpolicy="no-referrer-when-downgrade">
-          </iframe>
-        </div>
+    <!-- Google Map -->
+    <div class="col-lg-6">
+      <div class="map-container" style="border-radius: 10px; overflow: hidden;">
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4637.51629347738!2d78.58607247610837!3d21.281030380432256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd457dcf18d31fb%3A0x32de9bd49cfac6b2!2sTilak%20lodge!5e1!3m2!1sen!2sin!4v1751796456729!5m2!1sen!2sin" 
+          width="100%" 
+          height="450" 
+          style="border:0;" 
+          allowfullscreen="" 
+          loading="lazy" 
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
       </div>
     </div>
   </div>
+</div>
+
 </section>
 
 
@@ -1372,12 +1376,7 @@
               Experience luxury and comfort in the heart of the city. Our
               commitment to excellence ensures an unforgettable stay.
             </p>
-            <div class="social-links">
-              <a href="#"><i class="fab fa-facebook"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-linkedin"></i></a>
-            </div>
+            
           </div>
           <div class="footer-section">
             <h4>Quick Links</h4>
@@ -1403,9 +1402,10 @@
             <h4>Contact Info</h4>
             <ul>
               <li>
-                <i class="fas fa-map-marker-alt"></i> Luxury Lodge
+                <i class="fas fa-map-marker-alt"></i> Tilak Lodge
+
               </li>
-              <li><i class="fas fa-phone"></i> +1 (555) 123-4567</li>
+              <li><i class="fas fa-phone"></i> +917643423456</li>
               <li><i class="fas fa-envelope"></i> TilakLodge@gmail.com</li>
               <li><i class="fas fa-clock"></i> 24/7 Available</li>
             </ul>
